--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,6 +40,47 @@
 	        android:text="@string/btn_map_terrain"/>
 	    
 	</LinearLayout>
+	
+    <LinearLayout
+        android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:background="@android:color/white"
+	    android:layout_marginTop="48dp"
+	    android:alpha="0.75" >
+	    
+        <EditText 
+            android:id="@+id/edit_direccion"
+            android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        style="@android:drawable/editbox_dropdown_dark_frame"
+	        android:inputType="text" />
+        
+    </LinearLayout>
+	
+    <LinearLayout
+        android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:background="@android:color/white"
+	    android:layout_gravity="bottom"
+	    android:alpha="0.75" >
+        
+        <Button 
+	        android:id="@+id/btn_iniciar"
+	        android:layout_width="0dip"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:onClick="IniciarMyLocationListener"
+	        android:text="@string/btn_map_iniciar" />
+        
+        <Button 
+	        android:id="@+id/btn_parar"
+	        android:layout_width="0dip"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:onClick="DetenerMyLocationListener"
+	        android:text="@string/btn_map_parar" />
+        
+    </LinearLayout>
     
 </fragment>
 
